# holochain-prototype

./: .gitignore  .hc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/stewardship/workdir/: dna.yaml
dnas/stewardship/zomes/coordinator/profiles/: Cargo.toml
dnas/stewardship/zomes/coordinator/stewardship/: Cargo.toml
dnas/stewardship/zomes/coordinator/stewardship/src/: actant.rs  all_actants.rs  all_clauses.rs  clause.rs  endorsement.rs  lib.rs  report.rs
dnas/stewardship/zomes/coordinator/stewardship/tests/: actant.rs  all_actants.rs  all_clauses.rs  clause.rs  endorsement.rs  report.rs
dnas/stewardship/zomes/coordinator/stewardship/tests/common/: mod.rs
dnas/stewardship/zomes/integrity/stewardship/: Cargo.toml
dnas/stewardship/zomes/integrity/stewardship/src/: actant.rs  clause.rs  endorsement.rs  lib.rs  report.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: holochain-app.ts
ui/src/stewardship/stewardship/: context.ts  stewardship-client.ts  stewardship-store.ts  types.ts
ui/src/stewardship/stewardship/elements/: actant-detail.ts  actant-select.ts  actant-summary.ts  all-actants.ts  all-clauses.ts  clause-detail.ts  clause-summary.ts  clauses-for-actant.ts  create-actant.ts  create-clause.ts  create-endorsement.ts  create-report.ts  csv-exporter.ts  edit-actant.ts  endorse-button.ts  endorsement-detail.ts  endorsement-summary.ts  endorsements-for-report.ts  report-detail.ts  report-summary.ts  reports-for-actant.ts  reports-for-clause.ts
workdir/: happ.yaml  web-happ.yaml
